--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -47,4 +47,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.21"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    // Custom thinkUp libs
+    implementation 'com.github.thinkupsoft.tkup-easy-list:easypagedlist:2.0.0'
+    implementation 'com.github.thinkupsoft.tkup-easy-list:easylist:2.0.0'
+
 }
